--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.24",
+    "chart.js": "^4.1.1",
+    "faker": "^6.6.6",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.5",
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/react": "^18.0.26",
     "typescript": "^4.9.4"
   }
